# nord-wg-gen

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  justfile  tailwind.css
.github/workflows/: main.yml
assets/: nord-wg-gen-11e1631f153566dc.js  nord-wg-gen-11e1631f153566dc.js.br  nord-wg-gen-624e327863a9fdf4.js  nord-wg-gen-624e327863a9fdf4.js.br  nord-wg-gen-6c1d46047f5ed667.js  nord-wg-gen-6c1d46047f5ed667.js.br  nord-wg-gen-740f1d60ea53994f.js  nord-wg-gen-740f1d60ea53994f.js.br  nord-wg-gen-aa85341cf3d4d668.js  nord-wg-gen-aa85341cf3d4d668.js.br  nord-wg-gen-bbecf596e7bef77c.js  nord-wg-gen-bbecf596e7bef77c.js.br  nord-wg-gen-dxh8d77d839a49bd43f.js  nord-wg-gen-dxhef77cffee2bffac1.js  nord-wg-gen_bg-4857d7af860ee2f8.wasm  nord-wg-gen_bg-4857d7af860ee2f8.wasm.br  nord-wg-gen_bg-705c5873c32a1708.wasm  nord-wg-gen_bg-705c5873c32a1708.wasm.br  nord-wg-gen_bg-b8a1ab28ab4fc9bb.wasm  nord-wg-gen_bg-b8a1ab28ab4fc9bb.wasm.br  nord-wg-gen_bg-caf530e43da85d00.wasm  nord-wg-gen_bg-caf530e43da85d00.wasm.br  nord-wg-gen_bg-d38f44aeba6f0170.wasm  nord-wg-gen_bg-d38f44aeba6f0170.wasm.br  nord-wg-gen_bg-d9998f074a919802.wasm  nord-wg-gen_bg-d9998f074a919802.wasm.br  nord-wg-gen_bg-dxh7116f19beaab624.wasm  nord-wg-gen_bg-dxh9d9318fd747863e.wasm  tailwind-92500e094676bb30.css  tailwind-92500e094676bb30.css.br  tailwind.css
assets/dioxus/: nord-wg-gen.js  nord-wg-gen.js.br  nord-wg-gen_bg.wasm  nord-wg-gen_bg.wasm.br
assets/dioxus/snippets/dioxus-interpreter-js-4774033abde10986/: inline0.js
assets/dioxus/snippets/dioxus-interpreter-js-7c1300c6684e1811/: inline0.js
css/: bun.lockb  package.json  pnpm-lock.yaml  tailwind.config.js
docs/assets/dioxus/: nord-wg-gen.js  nord-wg-gen_bg.wasm
src/: app.rs  components.rs  main.rs  mapper.rs  utils.rs
src/components/: input.rs  mod.rs  navbar.rs  result.rs  servers.rs
wasm/: nord-wg-gen.js  nord-wg-gen.js.br  nord-wg-gen_bg.wasm  nord-wg-gen_bg.wasm.br
wasm/snippets/dioxus-interpreter-js-161bb2cc5b21a4da/: inline0.js  inline0.js.br
(+4 files in other folders)
