[package]
name = "nord-wg-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
console_error_panic_hook = "0.1.7"
dioxus = { version = "0.5.0", features = ["web"] }
dioxus-logger = "0.4.1"
image = "0.24.8"
log = "0.4.20"
qrcode = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
