[package]
name = "nord-wg-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
console_error_panic_hook = "0.1"
dioxus = { version = "0.5", features = ["web"] }
dioxus-logger = "0.5"
dioxus-sdk = { git = "https://github.com/DioxusLabs/sdk.git", features = [
    "timing",
] }
image = "0.25"
log = "0.4"
qrcode = "0.14"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
